# Songrequest-Studio

./: Cargo.toml
migrations/: 20240123133304_init.sql
src/: main.rs
src/services/: auth.rs  mod.rs  sse.rs
src/util/: error.rs
