[package]
name = "songrequest-studio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = { version = "2.0.0", features = ["sse"] }
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = "0.1.14"
