[package]
name = "songrequest-studio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
dotenvy = "0.15.7"
envy = "0.4.2"
poem = { version = "2.0.0", features = ["sse"] }
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "mysql", "macros"] }
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = "0.1.14"
